5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1793_1596.log
== TEST (2019-05-30 18:04:16) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:05:34) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v)
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:07:48) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) - v
t = len(v)
print(s)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:08:09) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = len(v)
print(s)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:08:40) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = v[0:-1]
print(s)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:09:06) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = v[0:]
print(s)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:09:16) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = v[0:]
print(s)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:09:44) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = len(v)
print(s)
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:10:54) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
print(s)
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:11:27) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
me = s / t
print(s)
print(t)
print(me)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:12:09) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
me = s / t
print(me)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:12:31) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
me = s / t
print(me)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:12:42) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
me = s / t
print(me)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:13:43) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v)
me = s / t
print(me)
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:14:04) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v)
me = (s / t) - m
print(me)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:15:02) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = v[min(v)]
me = (s / t) 
print(me)
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:15:36) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v[])
me = (s / t) 
print(me)
print(m)

-- ERROR:
File "XXXX", line 5
    m = min(v[])
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:15:45) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v[0:-1])
me = (s / t) 
print(me)
print(m)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:16:02) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v[0:-1])
me = (s / t) - m
print(me)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:16:15) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v[0:-1])
me = (s / t) - m
print(me)


-- EXECUTION TIME:
1.84471
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.3333333333333333
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.7999999999999998
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:16:32) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v[0:-1])
me = (s / t) - m
print(round(me, 2))


-- EXECUTION TIME:
2.11768
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:16:42) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v[0:-1])
me = (s / t) - m
print(round(me, 2))


-- EXECUTION TIME:
2.107
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:16:59) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v[0:-1])
me = (s / t) - m
print(round(me, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:37) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v[0:-1])
me = (s / t)
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:17:50) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v[0:-1])
me = (s / t)
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:18:34) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v[0:-1] -1)
me = (s / t)
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:19:48) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v)
me = (s / t)
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:20:17) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v)
me = (s / t) - m
print(round(me, 2))


-- EXECUTION TIME:
2.38682
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.33
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
1.8
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
Digite vetor: 0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:21:00) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v)
me = (s / t) - m
print(round(v[me], 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:22:16) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
me = (s / t) - min(v)
print(round(me, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:23:01) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
me = (s - min(v)) / t
print(round(me, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:23:53) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v)
print(m)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:24:45) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v)
me = (sum(v) - m)
print(me)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:25:12) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v)
me = (sum(v) - m) / t
print(me)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:27:03) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v)
me = (sum(v) - m) / t
print(s)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:27:29) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v)
me = (sum(v) - m) / t
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:28:00) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v)
me = (s - m) / t
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:28:11) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
t = size(v)
m = min(v)
me = (s - m) / t
print(me)


-- EXECUTION TIME:
1.5707
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
1.3333333333333333
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
2.6
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
1.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:28:59) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
m = min(v)
t = size(v)
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:29:44) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
m = min(v)
t = size(v)
mn = t - m
print(mn)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:35:39) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
m = min(v)
s1 = s - m
t = size(v) - 1
me = (s1 / t) 
print(me)


-- EXECUTION TIME:
1.86174
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
Digite vetor: 3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
Digite vetor: 2.0
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 18:36:35) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
m = min(v)
s1 = s - m
t = size(v) - 1
me = (s1 / t) 
print(me)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 18:36:57) 
-- CODE:
from numpy import*
v = array(eval(input("Digite vetor: ")))
s = sum(v) 
m = min(v)
s1 = s - m
t = size(v) - 1
me = (s1 / t) 
print(me)


-- EXECUTION TIME:
1.64358
-- TEST CASE 1:
---- input:
[1,0,3]
---- correct output:
2.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
[3,2,1,5,3]
---- correct output:
3.25
---- user output:
3.25
-- TEST CASE 3:
---- input:
[2,2,2,2]
---- correct output:
2.0
---- user output:
2.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
